applets/brightness: Improve integration with dbus service availability

Let's only try to initialize the DBus connections when the required
service is available, and then watch for changes in avilability, so
the UI always reflects the current status

BUG: 486067
FIXED-IN: 6.3.0